# ccgo

./: CCGOConfig.cmake.in  CMakeLists.txt  Doxyfile  README.md
include/: CommonParams.hpp  Constraint.hpp  EqualityLagrangeConstraint.hpp  Function.hpp  LagrangeConstraint.hpp  NameException.hpp  Optimizer.hpp  ParamContainer.hpp  Switch.hpp  TargetChiSquare.hpp  TargetFunction.hpp  TestConstraint.hpp  debug.hpp
src/: CommonParams.cpp  Constraint.cpp  EqualityLagrangeConstraint.cpp  Function.cpp  LagrangeConstraint.cpp  NameException.cpp  Optimizer.cpp  ParamContainer.cpp  Switch.cpp  TargetChiSquare.cpp  TargetFunction.cpp  TestConstraint.cpp  debug.cpp  main.cpp
